[gd_scene load_steps=65 format=3 uid="uid://4i4vsvg3y3ew"]

[ext_resource type="Script" uid="uid://d56x1xvysuqk" path="res://player.gd" id="1_a2nhq"]
[ext_resource type="Texture2D" uid="uid://clavr1dqbvim7" path="res://assets/player_sprites/Attack_KG_1.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://br8h88x8a7g81" path="res://assets/player_sprites/Attack_KG_2.png" id="3_sweqy"]
[ext_resource type="Texture2D" uid="uid://bu6xwmh6856qf" path="res://assets/player_sprites/Attack_KG_3.png" id="4_1jxqw"]
[ext_resource type="Texture2D" uid="uid://kku85a4nl5q8" path="res://assets/player_sprites/Idle_KG_2.png" id="4_2hs0m"]
[ext_resource type="Texture2D" uid="uid://cbegd5kdixffc" path="res://assets/player_sprites/Walking_KG_2.png" id="5_1jxqw"]
[ext_resource type="Texture2D" uid="uid://di2ouynhr2dsg" path="res://assets/player_sprites/Attack_KG_4.png" id="5_dw050"]
[ext_resource type="Texture2D" uid="uid://dmvrmweg7p7eu" path="res://assets/buttons/buttons/button1.png" id="8_bwjto"]
[ext_resource type="Texture2D" uid="uid://66qpbqie7vg7" path="res://assets/buttons/buttons/button3.png" id="9_606se"]
[ext_resource type="Texture2D" uid="uid://dtctcfj1b4hvj" path="res://assets/buttons/buttons/buttonA.png" id="10_u1c27"]
[ext_resource type="Texture2D" uid="uid://cjs08qf7qthp4" path="res://assets/buttons/buttons/button2.png" id="11_606se"]
[ext_resource type="Texture2D" uid="uid://dk47e4qnlywqn" path="res://assets/buttons/buttons/left.png" id="11_urp6f"]
[ext_resource type="Texture2D" uid="uid://0e8b5sunakqr" path="res://assets/buttons/buttons/right.png" id="12_bwjto"]
[ext_resource type="PackedScene" uid="uid://crpryfuf4iugg" path="res://p_bar.tscn" id="12_ivps1"]
[ext_resource type="Texture2D" uid="uid://bbsoucjce2o0w" path="res://assets/effects/flash.png" id="12_urp6f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_i3pqv")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_i3pqv")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_i3pqv")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_i3pqv")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_i3pqv")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("3_sweqy")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("3_sweqy")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("3_sweqy")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_sweqy")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_sweqy")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_sweqy")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("4_1jxqw")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("4_1jxqw")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("4_1jxqw")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("4_1jxqw")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("4_1jxqw")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("4_1jxqw")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("4_1jxqw")
region = Rect2(600, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("4_1jxqw")
region = Rect2(700, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("4_1jxqw")
region = Rect2(800, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("5_dw050")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("5_dw050")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("5_dw050")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("5_dw050")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("5_dw050")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("4_2hs0m")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("4_2hs0m")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("4_2hs0m")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("4_2hs0m")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("5_1jxqw")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("5_1jxqw")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("5_1jxqw")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("5_1jxqw")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("5_1jxqw")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("5_1jxqw")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("5_1jxqw")
region = Rect2(600, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1fhx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": false,
"name": &"atk1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}],
"loop": false,
"name": &"atk2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}],
"loop": false,
"name": &"atk3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}],
"loop": false,
"name": &"atk4",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cj7xq"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytxnd"]
size = Vector2(157, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("12_urp6f")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("12_urp6f")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("12_urp6f")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("12_urp6f")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("12_urp6f")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("12_urp6f")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("12_urp6f")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("12_urp6f")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibah8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}],
"loop": false,
"name": &"flash",
"speed": 12.0
}]

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_a2nhq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(5, -11)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_t1fhx")
animation = &"atk1"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_cj7xq")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 3
visibility_layer = 3
position = Vector2(53, 0)
shape = SubResource("RectangleShape2D_ytxnd")

[node name="bar_position" type="Node2D" parent="."]
position = Vector2(-1, -68)

[node name="attack_timer" type="Timer" parent="."]

[node name="skill_timer" type="Timer" parent="."]
one_shot = true

[node name="burst_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0

[node name="stats_display" type="Label" parent="."]
visible = false
offset_left = -52.0
offset_top = -207.0
offset_right = 55.0
offset_bottom = -83.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="attack" type="TextureButton" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 949.0
offset_top = 438.0
offset_right = 1149.0
offset_bottom = 638.0
pivot_offset = Vector2(100, 100)
texture_normal = ExtResource("8_bwjto")
texture_pressed = ExtResource("8_bwjto")
texture_hover = ExtResource("8_bwjto")
stretch_mode = 4

[node name="Label3" type="Label" parent="CanvasLayer/buttons/attack"]
layout_mode = 0
offset_left = 78.0
offset_top = 163.0
offset_right = 128.0
offset_bottom = 186.0
text = "Attack"

[node name="skill" type="TextureButton" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 908.0
offset_top = 395.0
offset_right = 1008.0
offset_bottom = 495.0
pivot_offset = Vector2(50, 50)
action_mode = 0
texture_normal = ExtResource("9_606se")
texture_pressed = ExtResource("9_606se")
texture_hover = ExtResource("9_606se")
stretch_mode = 4
metadata/_edit_group_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/buttons/skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 60.0
fill_mode = 5
texture_progress = ExtResource("9_606se")
tint_progress = Color(0, 0, 0, 0.592157)

[node name="Label2" type="Label" parent="CanvasLayer/buttons/skill"]
layout_mode = 0
offset_left = 36.0
offset_top = 81.0
offset_right = 76.0
offset_bottom = 104.0
text = "skill"

[node name="time" type="Label" parent="CanvasLayer/buttons/skill"]
layout_mode = 0
offset_left = 30.895
offset_top = 30.975
offset_right = 56.525
offset_bottom = 53.975
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "7.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="burst" type="TextureButton" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 1022.0
offset_top = 355.0
offset_right = 1122.0
offset_bottom = 455.0
pivot_offset = Vector2(50, 50)
action_mode = 0
texture_normal = ExtResource("10_u1c27")
texture_pressed = ExtResource("10_u1c27")
texture_hover = ExtResource("10_u1c27")
stretch_mode = 4
metadata/_edit_group_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/buttons/burst"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 60.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("10_u1c27")
tint_progress = Color(0, 0, 0, 0.592157)

[node name="Label" type="Label" parent="CanvasLayer/buttons/burst"]
layout_mode = 0
offset_left = 32.0
offset_top = 78.0
offset_right = 74.0
offset_bottom = 101.0
text = "burst"

[node name="time" type="Label" parent="CanvasLayer/buttons/burst"]
layout_mode = 0
offset_left = 30.895
offset_top = 30.975
offset_right = 56.525
offset_bottom = 53.975
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "7.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dash" type="TextureButton" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 870.0
offset_top = 514.0
offset_right = 970.0
offset_bottom = 614.0
pivot_offset = Vector2(50, 50)
action_mode = 0
texture_normal = ExtResource("11_606se")
texture_pressed = ExtResource("11_606se")
texture_hover = ExtResource("11_606se")
stretch_mode = 4
metadata/_edit_group_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/buttons/dash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 20.0
step = 0.01
value = 5.7
fill_mode = 5
texture_progress = ExtResource("11_606se")
tint_progress = Color(0, 0, 0, 0.592157)

[node name="Label" type="Label" parent="CanvasLayer/buttons/dash"]
layout_mode = 0
offset_left = 33.0
offset_top = 80.0
offset_right = 75.0
offset_bottom = 103.0
text = "dash"

[node name="time" type="Label" parent="CanvasLayer/buttons/dash"]
layout_mode = 0
offset_left = 30.895
offset_top = 30.975
offset_right = 56.525
offset_bottom = 53.975
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "7.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="left" type="Button" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 65.0
offset_top = 474.0
offset_right = 165.0
offset_bottom = 574.0
pivot_offset = Vector2(50, 50)
theme_override_font_sizes/font_size = 48
action_mode = 0
icon = ExtResource("11_urp6f")
icon_alignment = 1
expand_icon = true

[node name="right" type="Button" parent="CanvasLayer/buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 211.0
offset_top = 474.0
offset_right = 297.0
offset_bottom = 561.0
pivot_offset = Vector2(50, 50)
theme_override_font_sizes/font_size = 48
action_mode = 0
icon = ExtResource("12_bwjto")
icon_alignment = 1
expand_icon = true

[node name="hp_bar" parent="CanvasLayer" instance=ExtResource("12_ivps1")]
offset_left = 23.0
offset_top = 607.0
offset_right = 223.0
offset_bottom = 632.0

[node name="attack_duration" type="Timer" parent="."]

[node name="dash_cd" type="Timer" parent="."]
one_shot = true

[node name="unpauser" type="Timer" parent="."]
process_mode = 3
one_shot = true
ignore_time_scale = true

[node name="delay" type="Timer" parent="unpauser"]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="flash" type="AnimatedSprite2D" parent="Node2D"]
z_index = 2
position = Vector2(76, 0)
scale = Vector2(2.35938, 2.25)
sprite_frames = SubResource("SpriteFrames_ibah8")
animation = &"flash"
frame = 7
frame_progress = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="skill_timer" to="." method="_on_skill_timer_timeout"]
[connection signal="timeout" from="burst_timer" to="." method="_on_burst_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/buttons/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/skill" to="." method="_on_skill_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/burst" to="." method="_on_burst_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/dash" to="." method="_on_dash_pressed"]
[connection signal="button_down" from="CanvasLayer/buttons/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="CanvasLayer/buttons/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="CanvasLayer/buttons/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="CanvasLayer/buttons/right" to="." method="_on_right_button_up"]
[connection signal="timeout" from="attack_duration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="dash_cd" to="." method="_on_dash_cd_timeout"]
[connection signal="timeout" from="unpauser" to="." method="_on_unpauser_timeout"]
[connection signal="timeout" from="unpauser/delay" to="." method="_on_delay_timeout"]
